Cambios header, espaciados y página home

--- a/app/globals.sass
+++ b/app/globals.sass
@@ -38,7 +38,7 @@ body
   //     rgb(var(--background-end-rgb))
   //   )
   //   rgb(var(--background-start-rgb))
-
+  margin-bottom: 0rem
 
 @layer utilities 
   .text-balance 
