--- a/app/sass/partials/_publications.sass
+++ b/app/sass/partials/_publications.sass
@@ -15,3 +15,7 @@
 
             .paper_date
             .paper_main
+                .paper_subtitle
+                    @apply text-black
+                .paper_doi
+                    @apply text-primary
