--- a/app/globals.sass
+++ b/app/globals.sass
@@ -4,6 +4,7 @@
 @import './sass/partials/_projects.sass'
 @import './sass/partials/_team.sass'
 @import './sass/partials/_tools.sass'
+@import './sass/partials/_publications.sass'
 @import './sass/lib/_type.sass'
 @import './sass/lib/_variables.sass'
 
