--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -161,7 +161,9 @@ $extra-bold: 900;
     background-color: lighten($color: $blue-primary, $amount: 20);
   }
 }
-
+.banner{
+  padding-top: $spacing_lg;
+}
 body,
 html {
   h2 {
@@ -255,7 +257,10 @@ header {
   top: 0;
   left: 0;
 }
-
+main{
+  padding: 2rem 0 0 0;
+  margin: 8rem 4rem 0 4rem;
+}
 .box-shadow {
   -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
   -moz-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
@@ -836,6 +841,7 @@ header {
   }
 
   section {
+    gap: $spacing_md;
     padding-top: $spacing_lg;
     // gap: 2rem;
     .filters {
@@ -873,11 +879,10 @@ header {
     }
 
     .paper {
-
+      gap: $spacing_sm;
       display: flex;
       .paper_date{
         align-content: center;
-        border: 1 px solid $black;
         border-radius: 16px;
         h5{
           .year{
