Estilo hover a courses

--- a/app/sass/lib/_type.sass
+++ b/app/sass/lib/_type.sass
@@ -1,6 +1,6 @@
 
 $body-text: 14px, medium, 140%, 1rem
-$sm-text: 16px, semibold, 140%, 1rem //h5
+$sm-text: 16px, 600, 140%, 1rem //h5
 $md-text: 20px, bold, 140%, 1rem //h4
 $lg-text: 24px, bold,140%, 1rem  //h3
 $xl-text: 28px, bold, 140%, 1rem //h2
